# AIUsageTracker

./: .gitignore  CHANGELOG.md  README.md  RESEARCH.md  ROADMAP.md  build.ps1  installer.iss  pyproject.toml  requirements.txt  run.py
aiusagetracker/: __init__.py  __main__.py  alarm.py  auth.py  cli.py  config.py  models.py  poller.py  reset.py  storage.py  token_stats.py
aiusagetracker/gui/: app.py  icons.py  theme.py
aiusagetracker/providers/: __init__.py  base.py  claude.py  codex.py
tests/: test_parsing.py  test_reset_detection.py  test_token_stats.py
